tests/paczka1/small_fuzzy/19846157.err
Error in line 3: PRfn A392 91,0
Error in line 16: Ic3w S875 ã5,5
